<resources>
    <string name="app_name">On Time</string>
    <string name="title_create_account">Create New Account</string>
    <string name="title_add_new_event">Add New Event</string>
    <string name="title_edit_event">Edit Event</string>
    <string name="ctr_delete_event">Delete Event?</string>
    <string name="ctr_event_removed">Event Removed!</string>
    <string name="ctr_event_saved">Event Saved</string>
    <string name="ctr_upcoming_events">Upcoming Events</string>
    <string name="btn_new_account">Create New Account</string>
    <string name="btn_create_account">Create Account</string>
    <string name="btn_login">Login</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_ok">OK</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_DELETE">DELETE</string>
    <string name="btn_new_event">New Event</string>
    <string name="btn_save_new_event">Save</string>
    <string name="btn_update_event">Update Event</string>
    <string name="acct_username">Username</string>
    <string name="acct_password">Password</string>
    <string name="acct_confirm_pass">Confirm Password</string>
    <string name="acct_email">Email</string>
    <string name="acct_phone">Phone Number</string>
    <string name="event_name">Event Name</string>
    <string name="event_date">Date</string>
    <string name="event_time">Time</string>
    <string name="event_location">Location</string>
    <string name="event_description">Description</string>
    <string name="radio_rememberId">Remember User ID</string>
    <string name="trans_login">Logging In</string>
    <string name="message_welcome">Welcome</string>
    <string name="message_acct_created">New Account Created!</string>
    <string name="message_event_updated">Event successfully updated!</string>
    <string name="message_delete_confirm">Are you sure you want to delete event?</string>
    <string name="message_deleted">The event has been deleted. Tap anywhere to continue</string>
    <string name="message_need_account">Need to create an account?</string>
    <string name="message_login_screen">Login to continue</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_not_saved" />
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="channel_name">Default Channel</string>
    <string name="channel_description">Default Notification Channel</string>
    <string name="permission_granted_please_continue">Permission Granted. please continue</string>
    <string name="update_event_info">Update Event Details</string>
    <string name="menu_title_home">Home</string>
    <string name="menu_item_profile">Profile</string>
    <string name="menu_item_settings">Settings</string>
    <string name="update_event_message">Update event details for each of the desired fields. Click "Save" when finished.</string>
    <string name="update_event_details">Update Event Details</string>

    <string name="save">Save</string>
    <string name="edit_select_date">Select Date</string>
    <string name="edit_select_time">Select Time</string>
</resources>