<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="60dp"
    android:padding="20dp"
    android:layout_gravity="center"
    android:backgroundTint="@color/material_dynamic_secondary100" >

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:text="@string/update_event_info" />

    <EditText
        android:id="@+id/edit_event_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:autofillHints="Edit text"
        android:hint="@string/event_name"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/edit_event_date"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end|fill"
        style="?android:spinnerStyle"
        android:hint="@string/event_date"
        android:textSize="20sp" />

    <Button
        android:id="@+id/edit_event_time"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end|fill"
        android:textSize="20sp"
        android:hint="@string/event_time"
        style="?android:spinnerStyle"
        />

    <EditText
        android:id="@+id/edit_event_location"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="sans-serif"
        android:autofillHints="Edit text"
        android:hint="@string/event_location"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/edit_event_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="sans-serif"
        android:autofillHints="Edit text"
        android:hint="@string/event_description"
        android:inputType="text|textShortMessage" />

    <TextView
        android:id="@+id/inv_date"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/inv_time"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone" />

</LinearLayout>