<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_event_fragment"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="20dp"
    android:useDefaultMargins="true">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="start|fill_horizontal"
        android:text="@string/event_name"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/add_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_gravity="start|fill_horizontal"
        android:inputType="text"
        android:hint="Enter the name of the event"
        android:autofillHints="name"
        />
    <TextView
        android:id="@+id/selected_date"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="start|fill_horizontal"
        android:text="@string/event_date"
        android:textSize="20sp" />
    <Button
        android:id="@+id/add_date"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_gravity="end|fill"
        android:text="Select Date"
        style="?android:spinnerStyle"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/selected_time"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_gravity="start|fill_horizontal"
        android:text="@string/event_time"
        android:textSize="20sp" />
    <Button
        android:id="@+id/add_time"
        android:layout_row="3"
        android:layout_column="2"
        android:layout_gravity="end|fill"
        android:text="Select Time"
        android:textSize="20sp"
        style="?android:spinnerStyle"
        />
    <TextView
        android:layout_row="4"
        android:layout_column="1"
        android:layout_gravity="start|fill_horizontal"
        android:text="@string/event_location"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/add_location"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_row="4"
        android:layout_column="2"
        android:layout_gravity="start|fill_horizontal"
        android:inputType="textPostalAddress"
        android:hint="enter location"
        android:autofillHints="postalAddress, name" />
    <TextView
        android:layout_row="5"
        android:layout_column="1"
        android:layout_gravity="start|fill_horizontal"
        android:text="@string/event_description"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/add_description"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_row="5"
        android:layout_column="2"
        android:layout_gravity="start|fill_horizontal"
        android:hint="enter description"
        android:inputType="text" />
    <Button
        android:id="@+id/add_button_save"
        android:layout_row="6"
        android:layout_column="1"
        android:layout_gravity="start|fill_horizontal"
        android:layout_columnSpan="3"
        android:background="@android:color/holo_orange_light"
        android:text="@string/btn_save_new_event"
        android:textSize="20sp"/>
</GridLayout>