<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginFragment" >

    <TextView
        android:id="@+id/login_text_view"
        android:text="@string/message_login_screen"
        android:textSize="26sp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/username_edit_text"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username_text_view"
        android:text="@string/acct_username"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toBottomOf="@id/login_text_view"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:inputType="text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/username_text_view"
        app:layout_constraintBaseline_toBaselineOf="@id/username_text_view" />

    <TextView
        android:id="@+id/password_text_view"
        android:text="@string/acct_password"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_edit_text" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/username_edit_text"
        app:layout_constraintBaseline_toBaselineOf="@id/password_text_view" />

    <Button
        android:id="@+id/login_button"
        android:text="@string/btn_login"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text" />

    <Button
        android:id="@+id/cancel_button"
        android:text="@string/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintLeft_toRightOf="@id/login_button"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text" />

    <TextView
        android:id="@+id/create_account_message"
        android:text="@string/message_need_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cancel_button"
        />

    <Button
        android:id="@+id/button_create_account"
        android:text="@string/btn_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_account_message"
        />

</androidx.constraintlayout.widget.ConstraintLayout>